relm4-macros/tests/ui/compile-fail/bad_impl.stderr
error: expected identifier, found `}`
  --> tests/ui/compile-fail/bad_impl.rs:30:1
   |
7  | impl SimpleComponent for TestComponent {
   |                                        - while parsing this item list starting here
...
30 | }
   | ^
   | |
   | expected identifier
   | the item list ends here

warning: unused import: `gtk`
 --> tests/ui/compile-fail/bad_impl.rs:1:13
  |
1 | use relm4::{gtk, ComponentParts, ComponentSender, SimpleComponent};
  |             ^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0046]: not all trait items implemented, missing: `Root`, `Widgets`, `init_root`
 --> tests/ui/compile-fail/bad_impl.rs:7:1
  |
7 | impl SimpleComponent for TestComponent {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Root`, `Widgets`, `init_root` in implementation
  |
  = help: implement the missing item: `type Root = Type;`
  = help: implement the missing item: `type Widgets = Type;`
  = help: implement the missing item: `fn init_root() -> <Self as SimpleComponent>::Root { todo!() }`
